# bobi_global_launch

./: CMakeLists.txt  README.md  package.xml
launch/: start_bobi.launch  start_bobi_sync.launch  start_fishbot_1.launch  start_fishbot_2.launch  start_fishbot_3.launch  start_lurebot_1.launch  start_lurebot_2.launch  start_lurebot_3.launch  start_video_streaming.launch
