<?xml version="1.0"?>
<package format="2">
  <name>bobi_global_launch</name>

  <version>0.1.0</version>
  <description>Some general launch files to accelerate the system startup</description>
  <maintainer email="b.papaspyros@gmail.com">Vaios Papaspyros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
